// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processFile __tests__/data/components/ClassExportInlineProps.tsx: dependencies 1`] = `Array []`;

exports[`processFile __tests__/data/components/ClassExportInlineProps.tsx: description 1`] = `""`;

exports[`processFile __tests__/data/components/ClassExportInlineProps.tsx: displayName 1`] = `"ClassExportInlineProps"`;

exports[`processFile __tests__/data/components/ClassExportInlineProps.tsx: id 1`] = `"packages/neotracker-component-explorer/src/__tests__/data/components/ClassExportInlineProps.tsx:ClassExportInlineProps"`;

exports[`processFile __tests__/data/components/ClassExportInlineProps.tsx: props 1`] = `
Object {
  "foo": Object {
    "defaultValue": undefined,
    "description": "",
    "required": true,
    "type": "T",
  },
}
`;

exports[`processFile __tests__/data/components/ClassExportInlineProps.tsx: renderAPI 1`] = `undefined`;

exports[`processFile __tests__/data/components/ConstExportInlineProps.tsx: dependencies 1`] = `Array []`;

exports[`processFile __tests__/data/components/ConstExportInlineProps.tsx: description 1`] = `""`;

exports[`processFile __tests__/data/components/ConstExportInlineProps.tsx: displayName 1`] = `"ConstExportInlineProps"`;

exports[`processFile __tests__/data/components/ConstExportInlineProps.tsx: id 1`] = `"packages/neotracker-component-explorer/src/__tests__/data/components/ConstExportInlineProps.tsx:ConstExportInlineProps"`;

exports[`processFile __tests__/data/components/ConstExportInlineProps.tsx: props 1`] = `
Object {
  "foo": Object {
    "defaultValue": undefined,
    "description": "",
    "required": true,
    "type": "number",
  },
}
`;

exports[`processFile __tests__/data/components/ConstExportInlineProps.tsx: renderAPI 1`] = `undefined`;

exports[`processFile __tests__/data/components/ConstExportInterfaceProps.tsx: dependencies 1`] = `Array []`;

exports[`processFile __tests__/data/components/ConstExportInterfaceProps.tsx: description 1`] = `""`;

exports[`processFile __tests__/data/components/ConstExportInterfaceProps.tsx: displayName 1`] = `"ConstExportInterfaceProps"`;

exports[`processFile __tests__/data/components/ConstExportInterfaceProps.tsx: id 1`] = `"packages/neotracker-component-explorer/src/__tests__/data/components/ConstExportInterfaceProps.tsx:ConstExportInterfaceProps"`;

exports[`processFile __tests__/data/components/ConstExportInterfaceProps.tsx: props 1`] = `
Object {
  "foo": Object {
    "defaultValue": undefined,
    "description": "",
    "required": true,
    "type": "string",
  },
}
`;

exports[`processFile __tests__/data/components/ConstExportInterfaceProps.tsx: renderAPI 1`] = `undefined`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: dependencies 1`] = `Array []`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: dependencies 2`] = `Array []`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: description 1`] = `""`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: description 2`] = `""`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: displayName 1`] = `"ContextProvider"`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: displayName 2`] = `"WithContext"`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: id 1`] = `"packages/neotracker-component-explorer/src/__tests__/data/components/ConstReExportProps.tsx:ContextProvider"`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: id 2`] = `"packages/neotracker-component-explorer/src/__tests__/data/components/ConstReExportProps.tsx:WithContext"`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: props 1`] = `
Object {
  "children": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "ReactNode",
  },
  "value": Object {
    "defaultValue": undefined,
    "description": "",
    "required": true,
    "type": "Props",
  },
}
`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: props 2`] = `
Object {
  "children": Object {
    "defaultValue": undefined,
    "description": "",
    "required": true,
    "type": "(value: Props) => ReactNode",
  },
}
`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: renderAPI 1`] = `undefined`;

exports[`processFile __tests__/data/components/ConstReExportProps.tsx: renderAPI 2`] = `undefined`;

exports[`processFile __tests__/data/components/DefaultExportInterfaceProps.tsx: dependencies 1`] = `Array []`;

exports[`processFile __tests__/data/components/DefaultExportInterfaceProps.tsx: description 1`] = `""`;

exports[`processFile __tests__/data/components/DefaultExportInterfaceProps.tsx: displayName 1`] = `"DefaultExportInterfaceProps"`;

exports[`processFile __tests__/data/components/DefaultExportInterfaceProps.tsx: id 1`] = `"packages/neotracker-component-explorer/src/__tests__/data/components/DefaultExportInterfaceProps.tsx:default"`;

exports[`processFile __tests__/data/components/DefaultExportInterfaceProps.tsx: props 1`] = `
Object {
  "foo": Object {
    "defaultValue": undefined,
    "description": "",
    "required": true,
    "type": "string",
  },
}
`;

exports[`processFile __tests__/data/components/DefaultExportInterfaceProps.tsx: renderAPI 1`] = `undefined`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: code 1`] = `
"import { ContentWrapper } from './ContentWrapper';
"
`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: code 2`] = `
"import { ContentWrapper } from './ContentWrapper';
const goodnight = 'Goodnight Moon';
"
`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: exampleTemplate 1`] = `
"{
    element: (ref) => {
      __REPLACE_ME__
    },
    data: () => {
      __REPLACE_DATA_ME__
    },
  }"
`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: exampleTemplate 2`] = `
"{
    element: (ref) => {
      __REPLACE_ME__
    },
    data: () => {
      __REPLACE_DATA_ME__
    },
  }"
`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: fixtureCode 1`] = `""`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: fixtureCode 2`] = `""`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: fixtureReturnText 1`] = `"{}"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: fixtureReturnText 2`] = `"{}"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: id 1`] = `"packages/neotracker-component-explorer/src/shared/app/components/explorer/ContentWrapper.tsx:ContentWrapper"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: id 2`] = `"packages/neotracker-component-explorer/src/shared/app/components/explorer/ContentWrapper.tsx:ContentWrapper"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: returnText 1`] = `"<ContentWrapper>Hello World</ContentWrapper>"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.example.tsx: returnText 2`] = `"<ContentWrapper>{goodnight}</ContentWrapper>"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.tsx: dependencies 1`] = `Array []`;

exports[`processFile shared/app/components/explorer/ContentWrapper.tsx: description 1`] = `""`;

exports[`processFile shared/app/components/explorer/ContentWrapper.tsx: displayName 1`] = `"ContentWrapper"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.tsx: id 1`] = `"packages/neotracker-component-explorer/src/shared/app/components/explorer/ContentWrapper.tsx:ContentWrapper"`;

exports[`processFile shared/app/components/explorer/ContentWrapper.tsx: props 1`] = `
Object {
  "about": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "accessKey": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "aria-activedescendant": Object {
    "defaultValue": undefined,
    "description": "Identifies the currently active element when DOM focus is on a composite widget, textbox, group, or application.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-atomic": Object {
    "defaultValue": undefined,
    "description": "Indicates whether assistive technologies will present all, or only parts of, the changed region based on the change notifications defined by the aria-relevant attribute.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-autocomplete": Object {
    "defaultValue": undefined,
    "description": "Indicates whether inputting text could trigger display of one or more predictions of the user's intended value for an input and specifies how predictions would be
presented if they are made.",
    "required": false,
    "type": "\\"none\\" | \\"inline\\" | \\"list\\" | \\"both\\" | undefined",
  },
  "aria-busy": Object {
    "defaultValue": undefined,
    "description": "Indicates an element is being modified and that assistive technologies MAY want to wait until the modifications are complete before exposing them to the user.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-checked": Object {
    "defaultValue": undefined,
    "description": "Indicates the current \\"checked\\" state of checkboxes, radio buttons, and other widgets.
@see aria-pressed
@see aria-selected.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | \\"mixed\\" | undefined",
  },
  "aria-colcount": Object {
    "defaultValue": undefined,
    "description": "Defines the total number of columns in a table, grid, or treegrid.
@see aria-colindex.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-colindex": Object {
    "defaultValue": undefined,
    "description": "Defines an element's column index or position with respect to the total number of columns within a table, grid, or treegrid.
@see aria-colcount
@see aria-colspan.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-colspan": Object {
    "defaultValue": undefined,
    "description": "Defines the number of columns spanned by a cell or gridcell within a table, grid, or treegrid.
@see aria-colindex
@see aria-rowspan.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-controls": Object {
    "defaultValue": undefined,
    "description": "Identifies the element (or elements) whose contents or presence are controlled by the current element.
@see aria-owns.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-current": Object {
    "defaultValue": undefined,
    "description": "Indicates the element that represents the current item within a container or set of related elements.",
    "required": false,
    "type": "boolean | \\"time\\" | \\"false\\" | \\"true\\" | \\"page\\" | \\"step\\" | \\"location\\" | \\"date\\" | undefined",
  },
  "aria-describedby": Object {
    "defaultValue": undefined,
    "description": "Identifies the element (or elements) that describes the object.
@see aria-labelledby",
    "required": false,
    "type": "string | undefined",
  },
  "aria-details": Object {
    "defaultValue": undefined,
    "description": "Identifies the element that provides a detailed, extended description for the object.
@see aria-describedby.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-disabled": Object {
    "defaultValue": undefined,
    "description": "Indicates that the element is perceivable but disabled, so it is not editable or otherwise operable.
@see aria-hidden
@see aria-readonly.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-dropeffect": Object {
    "defaultValue": undefined,
    "description": "Indicates what functions can be performed when a dragged object is released on the drop target.
@deprecated in ARIA 1.1",
    "required": false,
    "type": "\\"link\\" | \\"none\\" | \\"copy\\" | \\"execute\\" | \\"move\\" | \\"popup\\" | undefined",
  },
  "aria-errormessage": Object {
    "defaultValue": undefined,
    "description": "Identifies the element that provides an error message for the object.
@see aria-invalid
@see aria-describedby.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-expanded": Object {
    "defaultValue": undefined,
    "description": "Indicates whether the element, or another grouping element it controls, is currently expanded or collapsed.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-flowto": Object {
    "defaultValue": undefined,
    "description": "Identifies the next element (or elements) in an alternate reading order of content which, at the user's discretion,
allows assistive technology to override the general default of reading in document source order.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-grabbed": Object {
    "defaultValue": undefined,
    "description": "Indicates an element's \\"grabbed\\" state in a drag-and-drop operation.
@deprecated in ARIA 1.1",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-haspopup": Object {
    "defaultValue": undefined,
    "description": "Indicates the availability and type of interactive popup element, such as menu or dialog, that can be triggered by an element.",
    "required": false,
    "type": "boolean | \\"dialog\\" | \\"menu\\" | \\"false\\" | \\"true\\" | \\"listbox\\" | \\"tree\\" | \\"grid\\" | undefined",
  },
  "aria-hidden": Object {
    "defaultValue": undefined,
    "description": "Indicates whether the element is exposed to an accessibility API.
@see aria-disabled.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-invalid": Object {
    "defaultValue": undefined,
    "description": "Indicates the entered value does not conform to the format expected by the application.
@see aria-errormessage.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | \\"grammar\\" | \\"spelling\\" | undefined",
  },
  "aria-keyshortcuts": Object {
    "defaultValue": undefined,
    "description": "Indicates keyboard shortcuts that an author has implemented to activate or give focus to an element.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-label": Object {
    "defaultValue": undefined,
    "description": "Defines a string value that labels the current element.
@see aria-labelledby.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-labelledby": Object {
    "defaultValue": undefined,
    "description": "Identifies the element (or elements) that labels the current element.
@see aria-describedby.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-level": Object {
    "defaultValue": undefined,
    "description": "Defines the hierarchical level of an element within a structure.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-live": Object {
    "defaultValue": undefined,
    "description": "Indicates that an element will be updated, and describes the types of updates the user agents, assistive technologies, and user can expect from the live region.",
    "required": false,
    "type": "\\"off\\" | \\"assertive\\" | \\"polite\\" | undefined",
  },
  "aria-modal": Object {
    "defaultValue": undefined,
    "description": "Indicates whether an element is modal when displayed.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-multiline": Object {
    "defaultValue": undefined,
    "description": "Indicates whether a text box accepts multiple lines of input or only a single line.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-multiselectable": Object {
    "defaultValue": undefined,
    "description": "Indicates that the user may select more than one item from the current selectable descendants.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-orientation": Object {
    "defaultValue": undefined,
    "description": "Indicates whether the element's orientation is horizontal, vertical, or unknown/ambiguous.",
    "required": false,
    "type": "\\"horizontal\\" | \\"vertical\\" | undefined",
  },
  "aria-owns": Object {
    "defaultValue": undefined,
    "description": "Identifies an element (or elements) in order to define a visual, functional, or contextual parent/child relationship
between DOM elements where the DOM hierarchy cannot be used to represent the relationship.
@see aria-controls.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-placeholder": Object {
    "defaultValue": undefined,
    "description": "Defines a short hint (a word or short phrase) intended to aid the user with data entry when the control has no value.
A hint could be a sample value or a brief description of the expected format.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-posinset": Object {
    "defaultValue": undefined,
    "description": "Defines an element's number or position in the current set of listitems or treeitems. Not required if all elements in the set are present in the DOM.
@see aria-setsize.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-pressed": Object {
    "defaultValue": undefined,
    "description": "Indicates the current \\"pressed\\" state of toggle buttons.
@see aria-checked
@see aria-selected.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | \\"mixed\\" | undefined",
  },
  "aria-readonly": Object {
    "defaultValue": undefined,
    "description": "Indicates that the element is not editable, but is otherwise operable.
@see aria-disabled.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-relevant": Object {
    "defaultValue": undefined,
    "description": "Indicates what notifications the user agent will trigger when the accessibility tree within a live region is modified.
@see aria-atomic.",
    "required": false,
    "type": "\\"text\\" | \\"additions\\" | \\"additions text\\" | \\"all\\" | \\"removals\\" | undefined",
  },
  "aria-required": Object {
    "defaultValue": undefined,
    "description": "Indicates that user input is required on the element before a form may be submitted.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-roledescription": Object {
    "defaultValue": undefined,
    "description": "Defines a human-readable, author-localized description for the role of an element.",
    "required": false,
    "type": "string | undefined",
  },
  "aria-rowcount": Object {
    "defaultValue": undefined,
    "description": "Defines the total number of rows in a table, grid, or treegrid.
@see aria-rowindex.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-rowindex": Object {
    "defaultValue": undefined,
    "description": "Defines an element's row index or position with respect to the total number of rows within a table, grid, or treegrid.
@see aria-rowcount
@see aria-rowspan.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-rowspan": Object {
    "defaultValue": undefined,
    "description": "Defines the number of rows spanned by a cell or gridcell within a table, grid, or treegrid.
@see aria-rowindex
@see aria-colspan.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-selected": Object {
    "defaultValue": undefined,
    "description": "Indicates the current \\"selected\\" state of various widgets.
@see aria-checked
@see aria-pressed.",
    "required": false,
    "type": "boolean | \\"false\\" | \\"true\\" | undefined",
  },
  "aria-setsize": Object {
    "defaultValue": undefined,
    "description": "Defines the number of items in the current set of listitems or treeitems. Not required if all elements in the set are present in the DOM.
@see aria-posinset.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-sort": Object {
    "defaultValue": undefined,
    "description": "Indicates if items in a table or grid are sorted in ascending or descending order.",
    "required": false,
    "type": "\\"none\\" | \\"ascending\\" | \\"descending\\" | \\"other\\" | undefined",
  },
  "aria-valuemax": Object {
    "defaultValue": undefined,
    "description": "Defines the maximum allowed value for a range widget.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-valuemin": Object {
    "defaultValue": undefined,
    "description": "Defines the minimum allowed value for a range widget.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-valuenow": Object {
    "defaultValue": undefined,
    "description": "Defines the current value for a range widget.
@see aria-valuetext.",
    "required": false,
    "type": "number | undefined",
  },
  "aria-valuetext": Object {
    "defaultValue": undefined,
    "description": "Defines the human readable text alternative of aria-valuenow for a range widget.",
    "required": false,
    "type": "string | undefined",
  },
  "as": Object {
    "defaultValue": undefined,
    "description": "Typing Note: prefer using .withComponent for now as it is actually type-safe.

String types need to be cast to themselves to become literal types (as={'a' as 'a'}).",
    "required": false,
    "type": "\\"symbol\\" | \\"object\\" | \\"a\\" | \\"abbr\\" | \\"address\\" | \\"area\\" | \\"article\\" | \\"aside\\" | \\"audio\\" | \\"b\\" | \\"base\\" | \\"bdi\\" | \\"bdo\\" | \\"big\\" | \\"blockquote\\" | \\"body\\" | \\"br\\" | \\"button\\" | \\"canvas\\" | ... 157 more ... | undefined",
  },
  "autoCapitalize": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "autoCorrect": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "autoSave": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "children": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "ReactNode",
  },
  "className": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "color": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "column": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "contentEditable": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "contextMenu": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "dangerouslySetInnerHTML": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "{ __html: string; } | undefined",
  },
  "datatype": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "defaultChecked": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "defaultValue": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | number | string[] | undefined",
  },
  "dir": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "draggable": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "hidden": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "id": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "inlist": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "any",
  },
  "inputMode": Object {
    "defaultValue": undefined,
    "description": "Hints at the type of data that might be entered by the user while editing the element or its contents
@see https://html.spec.whatwg.org/multipage/interaction.html#input-modalities:-the-inputmode-attribute",
    "required": false,
    "type": "\\"text\\" | \\"none\\" | \\"tel\\" | \\"url\\" | \\"email\\" | \\"numeric\\" | \\"decimal\\" | \\"search\\" | undefined",
  },
  "is": Object {
    "defaultValue": undefined,
    "description": "Specify that a standard HTML element should behave like a defined custom built-in element
@see https://html.spec.whatwg.org/multipage/custom-elements.html#attr-is",
    "required": false,
    "type": "string | undefined",
  },
  "itemID": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "itemProp": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "itemRef": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "itemScope": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "itemType": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "key": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | number | undefined",
  },
  "lang": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "onAbort": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onAbortCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onAnimationEnd": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: AnimationEvent<HTMLDivElement>) => void) | undefined",
  },
  "onAnimationEndCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: AnimationEvent<HTMLDivElement>) => void) | undefined",
  },
  "onAnimationIteration": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: AnimationEvent<HTMLDivElement>) => void) | undefined",
  },
  "onAnimationIterationCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: AnimationEvent<HTMLDivElement>) => void) | undefined",
  },
  "onAnimationStart": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: AnimationEvent<HTMLDivElement>) => void) | undefined",
  },
  "onAnimationStartCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: AnimationEvent<HTMLDivElement>) => void) | undefined",
  },
  "onAuxClick": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onAuxClickCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onBeforeInput": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onBeforeInputCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onBlur": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FocusEvent<HTMLDivElement>) => void) | undefined",
  },
  "onBlurCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FocusEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCanPlay": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onCanPlayCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onCanPlayThrough": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onCanPlayThroughCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onChange": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onChangeCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onClick": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onClickCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onCompositionEnd": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: CompositionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCompositionEndCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: CompositionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCompositionStart": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: CompositionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCompositionStartCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: CompositionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCompositionUpdate": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: CompositionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCompositionUpdateCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: CompositionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onContextMenu": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onContextMenuCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onCopy": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: ClipboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCopyCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: ClipboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCut": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: ClipboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onCutCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: ClipboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDoubleClick": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onDoubleClickCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onDrag": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragEnd": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragEndCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragEnter": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragEnterCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragExit": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragExitCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragLeave": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragLeaveCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragOver": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragOverCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragStart": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDragStartCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDrop": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDropCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: DragEvent<HTMLDivElement>) => void) | undefined",
  },
  "onDurationChange": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onDurationChangeCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onEmptied": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onEmptiedCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onEncrypted": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onEncryptedCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onEnded": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onEndedCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onError": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onErrorCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onFocus": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FocusEvent<HTMLDivElement>) => void) | undefined",
  },
  "onFocusCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FocusEvent<HTMLDivElement>) => void) | undefined",
  },
  "onGotPointerCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onGotPointerCaptureCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onInput": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onInputCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onInvalid": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onInvalidCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onKeyDown": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: KeyboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onKeyDownCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: KeyboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onKeyPress": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: KeyboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onKeyPressCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: KeyboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onKeyUp": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: KeyboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onKeyUpCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: KeyboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onLoad": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadStart": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadStartCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadedData": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadedDataCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadedMetadata": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLoadedMetadataCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onLostPointerCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onLostPointerCaptureCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onMouseDown": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseDownCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseEnter": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseLeave": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseMove": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseMoveCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseOut": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseOutCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseOver": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseOverCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseUp": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onMouseUpCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: MouseEvent<HTMLDivElement, MouseEvent>) => void) | undefined",
  },
  "onPaste": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: ClipboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPasteCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: ClipboardEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPause": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onPauseCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onPlay": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onPlayCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onPlaying": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onPlayingCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onPointerCancel": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerCancelCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerDown": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerDownCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerEnter": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerEnterCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerLeave": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerLeaveCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerMove": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerMoveCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerOut": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerOutCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerOver": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerOverCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerUp": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onPointerUpCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: PointerEvent<HTMLDivElement>) => void) | undefined",
  },
  "onProgress": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onProgressCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onRateChange": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onRateChangeCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onReset": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onResetCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onScroll": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: UIEvent<HTMLDivElement>) => void) | undefined",
  },
  "onScrollCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: UIEvent<HTMLDivElement>) => void) | undefined",
  },
  "onSeeked": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSeekedCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSeeking": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSeekingCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSelect": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSelectCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onStalled": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onStalledCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSubmit": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onSubmitCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: FormEvent<HTMLDivElement>) => void) | undefined",
  },
  "onSuspend": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onSuspendCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onTimeUpdate": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onTimeUpdateCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onTouchCancel": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchCancelCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchEnd": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchEndCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchMove": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchMoveCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchStart": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTouchStartCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TouchEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTransitionEnd": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TransitionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onTransitionEndCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: TransitionEvent<HTMLDivElement>) => void) | undefined",
  },
  "onVolumeChange": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onVolumeChangeCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onWaiting": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onWaitingCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: SyntheticEvent<HTMLDivElement, Event>) => void) | undefined",
  },
  "onWheel": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: WheelEvent<HTMLDivElement>) => void) | undefined",
  },
  "onWheelCapture": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((event: WheelEvent<HTMLDivElement>) => void) | undefined",
  },
  "placeholder": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "prefix": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "property": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "radioGroup": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "ref": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "((instance: HTMLDivElement | null) => void) | RefObject<HTMLDivElement> | null | undefined",
  },
  "resource": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "results": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "number | undefined",
  },
  "role": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "security": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "slot": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "spellCheck": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "style": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "CSSProperties | undefined",
  },
  "suppressContentEditableWarning": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "suppressHydrationWarning": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "boolean | undefined",
  },
  "tabIndex": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "number | undefined",
  },
  "theme": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "any",
  },
  "title": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "typeof": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
  "unselectable": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "\\"on\\" | \\"off\\" | undefined",
  },
  "vocab": Object {
    "defaultValue": undefined,
    "description": "",
    "required": false,
    "type": "string | undefined",
  },
}
`;

exports[`processFile shared/app/components/explorer/ContentWrapper.tsx: renderAPI 1`] = `undefined`;
